separate category on-demand/serverless for inference and add chat completion
