# api/openapi.yaml
@@ -26,7 +26,9 @@ tags:
     description: Deals with training jobs
   - name: Deployments
     description: Deals with deployments
-  - name: Inference
+  - name: Serverless Inference
+    description: Deals with serverless deployments
+  - name: On-Demand Inference
     description: Deals with inference request to the deployed model
 paths:
   '/v1/models':
@@ -627,7 +629,7 @@ paths:
   '/v1/projects/{project_id}/deployments/{deployment_id}/completions':
     post:
       tags:
-        - Inference
+        - On-Demand Inference
       summary: Completions
       description: Get completions from a deployment using the provided input.
       operationId: getCompletionsFromDeployment
@@ -698,10 +700,76 @@ paths:
           $ref: '#/components/responses/NotFound'
         '400':
           $ref: '#/components/responses/InvalidInput'
+  '/v1/chat/completions':
+    post:
+      tags:
+        - Serverless Inference
+      summary: Chat Completions
+      description: Get chat completions from a serverless deployment.
+      operationId: getChatCompletions
+      requestBody:
+        required: true
+        description: Provide your model and chat input for completions
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                model:
+                  type: string
+                  example: "Llama-3.2-1B-Instrct"
+                messages:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      role:
+                        type: string
+                        enum:
+                          - system
+                          - user
+                          - assistant
+                        example: "user"
+                        description: The role of the message sender
+                      content:
+                        type: string
+                        example: "Hello, how are you?"
+                        description: The content of the message
+                  required:
+                    - role
+                    - content
+                temperature:
+                  type: number
+                  example: 0.7
+                  description: The sampling temperature to use
+                max_new_tokens:
+                  type: integer
+                  example: 500
+                  description: The maximum number of new tokens to generate
+                top_p:
+                  type: number
+                  example: 0.9
+                  description: The cumulative probability for token selection
+                top_k:
+                  type: integer
+                  example: 50
+                  description: The number of highest probability tokens to keep for top-k-filtering
+                no_repeat_ngram_size:
+                  type: integer
+                  example: 2
+                  description: The size of n-grams to avoid repeating
+                do_sample:
+                  type: boolean
+                  example: true
+                  description: Whether to use sampling or not
+                required:
+                  - model
+                  - messages
+
   '/v1/projects/{project_id}/deployments/{deployment_id}/chat/completions':
     post:
       tags:
-        - Inference
+        - On-Demand Inference
       summary: Chat Completions
       description: Get chat completions from a deployment using the provided input.
       operationId: getChatCompletionsFromDeployment
@@ -794,7 +862,7 @@ paths:
   '/v1/projects/{project_id}/deployments/{deployment_id}/embeddings':
     post:
       tags:
-        - Inference
+        - On-Demand Inference
       summary: Embeddings
       description: Get embeddings from a deployment using the provided input.
       operationId: getEmbeddingsFromDeployment
@@ -877,7 +945,7 @@ paths:
   '/v1/projects/{project_id}/deployments/{deployment_id}/classification':
     post:
       tags:
-        - Inference
+        - On-Demand Inference
       summary: Classification
       description: Get classification from a deployment using the provided input.
       operationId: getClassificationFromDeployment
